# ibilce_blockC

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  obj_loader.c  obj_loader.h
assets/chalkboard/: ChalkBoard.mtl
assets/chalkboard/source/: ChalkBoard.blend
assets/deskschool/: school chair.mtl
assets/toilet/: toilet.mtl
chair.h/: chair_h.mtl
include/: obj_loader.h
src/: main.c  obj_loader.c
